--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -7,7 +7,8 @@
   margin-left: 470px;
   border-radius: 16px;
   gap: 24px;
-  padding: 16px;
+  padding-left: 32px;
+  padding-top: 16px;
   box-shadow: 0px 4px 20px 4px rgba(0, 0, 0, 0.08);
   font-family: "Roboto";
   font-size: 16px;
@@ -38,7 +39,16 @@
   height: 48px;
   border-radius: 8px;
   background-color: #f8f8f8;
-  padding: 12px 8px 12px 16px;
+}
+.registration__dataEntry__block__input__text {
+  width: 400px;
+  padding: 12px 8px 0 16px;
+  color: #808185;
+}
+.registration__dataEntry__block__input__eye {
+  cursor: pointer;
+  position: absolute;
+  margin-top: 12px;
 }
 .registration__button {
   display: flex;
@@ -49,9 +59,16 @@
   background: #512689;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  transition: background-color 1s;
 }
 .registration__button__text {
+  cursor: pointer;
   height: 22px;
   width: 156px;
   color: white;
+}
+.registration__button:hover {
+  background: #623b94;
+  box-shadow: 0px 4px 20px 4px rgba(0, 0, 0, 0.08);
 }/*# sourceMappingURL=SignUp.css.map */
