--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Playfair+Display:wght@400;600;700&family=Roboto:wght@400&display=swap");
 * {
+  font-weight: 400;
+  font-family: "Roboto";
   margin: 0;
   padding: 0;
   cursor: default;
