--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Playfair+Display:wght@400;600;700&family=Roboto:wght@400&display=swap');
+
+$mainFontFamily: 'Roboto';
+
+$fontWeight: 400;
+
 * {
+    font-weight: $fontWeight;
+    font-family: $mainFontFamily;
     margin: 0;
     padding: 0;
     cursor: default;
