add Routes and OurTeam page

--- a/src/components/PartnersCard/ParthersCard.css
+++ b/src/components/PartnersCard/ParthersCard.css
@@ -39,6 +39,7 @@
   margin: 8px 16px;
 }
 .parthersCard__header__userCard {
+  position: absolute;
   display: flex;
   color: #ffffff;
   margin-top: 39px;
