--- a/src/components/OurTeam/OurTeam.css
+++ b/src/components/OurTeam/OurTeam.css
@@ -46,4 +46,33 @@
   line-height: 21.79px;
   cursor: pointer;
   margin: 8px 16px;
+}
+.ourTeam__userBlock {
+  font-family: sans-serif;
+  text-align: center;
+  margin-top: 48px;
+  margin-left: 80px;
+  width: 1280px;
+}
+.ourTeam__userBlock__user {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.ourTeam__userBlock__user__info {
+  color: #151317;
+  cursor: pointer;
+  box-shadow: 0px 0.9960451126px 3.9841804504px 0px rgba(51, 51, 51, 0.1490196078);
+  width: 305px;
+  height: 263px;
+  display: grid;
+  gap: 16px;
+  justify-content: center;
+  box-sizing: border-box;
+  padding: 36px 80px 20px 80px;
+}
+.ourTeam__userBlock__user__info__img {
+  cursor: pointer;
+  border-radius: 100px;
 }/*# sourceMappingURL=OurTeam.css.map */
